# Rutilities

./: README.md
HelloWorldRenv/: .gitignore  README.md  librariesdoc.R  script.R
HelloWorldRenv/renv/: .gitignore
RobynHW/: .gitignore  README.md
RobynHW/poe_project/robyn-demo/: .gitignore  demo.R  pyproject.toml
RobynHW/poe_project/robyn-demo/tests/: test_robyn_demo.py
reticulateHW/: .gitignore  README.md  script.R
